# electrs

./: Cargo.toml  README.md  TODO.md  flake.nix  rust-toolchain.toml
.github/workflows/: start-gitlab.yml
benches/: benches.rs
contrib/: electrs.service
doc/: schema.md  usage.md
src/: chain.rs  config.rs  daemon.rs  errors.rs  metrics.rs  rest.rs
src/electrum/: discovery.rs  server.rs
src/elements/: asset.rs  peg.rs  registry.rs
src/new_index/: db.rs  db_metrics.rs  fetch.rs  mempool.rs  precache.rs  query.rs  schema.rs
src/util/: block.rs  transaction.rs
tests/: common.rs  electrum.rs  rest.rs
