workspace = { members = ["electrs_macros"] }

[package]
name = "electrs"
version = "0.4.1"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "An efficient re-implementation of Electrum Server in Rust"
license = "MIT"
homepage = "https://github.com/blockstream/electrs"
repository = "https://github.com/blockstream/electrs"
keywords = ["bitcoin", "electrum", "server", "index", "database"]
readme = "README.md"
edition = "2018"
default-run = "electrs"

[features]
liquid = ["elements"]
electrum-discovery = ["electrum-client"]
bench = []
otlp-tracing = [
    "tracing",
    "tracing-subscriber",
    "opentelemetry",
    "tracing-opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry-semantic-conventions",
    "electrs_macros/otlp-tracing"
]

[dependencies]
arraydeque = "0.5.1"
arrayref = "0.3.6"
base64 = "0.22"
bincode = "1.3.1"
bitcoin = { version = "0.32.4", features = ["serde"] }
clap = "2.33.3"
crossbeam-channel = "0.5.0"
dirs = "6.0"
elements = { version = "0.26", features = ["serde"], optional = true }
error-chain = "0.12.4"
glob = "0.3"
itertools = "0.14"
lazy_static = "1.3.0"
libc = "0.2.81"
log = "0.4.11"
socket2 = { version = "0.6", features = ["all"] }
num_cpus = "1.12.0"
page_size = "0.6.0"
prometheus = "0.14"
rayon = "1.5.0"
rocksdb = "0.24"
rust-crypto = "0.2"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
signal-hook = "0.4"
stderrlog = "0.6"
sysconf = ">=0.3.4"
time = { version = "0.3", features = ["formatting"] }
tiny_http = "0.12.0"
url = "2.2.0"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "server-graceful"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "rt", "net", "time"] }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = {  version = "0.21.0", optional = true }
opentelemetry-otlp = { version = "0.13.0", default-features = false, features = ["http-proto", "reqwest-client"], optional = true }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"], optional = true }
opentelemetry-semantic-conventions = { version = "0.12.0", optional = true }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"], optional = true }
rand = "0.9.1"

# optional dependencies for electrum-discovery
electrum-client = { version = "0.8", optional = true }
zmq = "0.10.0"
electrs_macros = { path = "electrs_macros", default-features = false }

[dev-dependencies]
corepc-node = { version = "0.10", features = ["download", "29_0"] }
elementsd = { version = "0.11", features = ["22_1_1"] }
electrumd = { version = "0.1.0", features = ["4_5_4"] }
ureq = { version = "3.1", default-features = false, features = ["json"] }
tempfile = "3.10"
criterion = { version = "0.8", features = ["html_reports"] }
bitcoin-test-data = { version = "*" }

[[bench]]
name = "benches"
harness = false
required-features = ["bench"]


[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[patch.crates-io.electrum-client]
git = "https://github.com/Blockstream/rust-electrum-client"
rev = "d3792352992a539afffbe11501d1aff9fd5b919d"            # add-peer branch

# not yet published on crates.io
[patch.crates-io.electrumd]
git = "https://github.com/shesek/electrumd"
rev = "b35d9db285d932cb3c2296beab65e571a2506349"
